--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Rik Lempens
 description: My digital home on the net
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
 
 gems:
