--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Rik Lempens
 description: My digital home on the net
 google_analytics: 
 show_downloads: false
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-mentions
