--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rik Lempens
-description: My digital home on the net
+description: My digital home on the web
 google_analytics: 
 show_downloads: false
 theme: jekyll-theme-cayman
